VisualForcePage/src/objects/Leave__c.object
<CustomObject>
    <description>To Apply For Leave And has a Lookup to The Contact</description>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leave</relationshipLabel>
        <relationshipName>Leave</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description_for_Leave__c</fullName>
        <label>Description for Leave</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Leave</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Leave Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leave</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>